--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="game-container"></div>
+    <div class="game-content">
+      <div class="score">
+        Score:
+        <span>0</span>
+      </div>
+      <div class="game-container"></div>
+    </div>
     <script src="js/game.js" type="module"></script>
   </body>
 </html>
