Add configurations settings

--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="overlay">
+      <div class="config">
+        <p class="title">Choose Your Own Configuration</p>
+        <div class="level">
+          <p>Choose Your Level :</p>
+          <div class="levels-box">
+            <span>0</span>
+            <span>1</span>
+          </div>
+        </div>
+        <div class="speed">
+          <p>Choose Your Speed :</p>
+          <div class="speeds-box">
+            <span>1</span>
+            <span>2</span>
+            <span>3</span>
+          </div>
+        </div>
+        <div class="play"><p>Start Game</p></div>
+      </div>
+    </div>
     <div class="game-content">
       <div class="score">
         Score:
